--- a/notebooks/visualization.ipynb
+++ b/notebooks/visualization.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -21,8 +21,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {},
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "class VAE(nn.Module):\n",
@@ -126,16 +128,69 @@
     "        return res, mu, logvar\n",
     "\n",
     "device = torch.device(\"cpu\")\n",
-    "model = VAE(nc=3, ngf=128, ndf=128, latent_variable_size=2).to(device)"
+    "model = VAE(nc=3, ngf=128, ndf=128, latent_variable_size=500).to(device)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "model.load_state_dict(torch.load('../models/Epoch_39_Train_loss_299016.4873_Test_loss_299262.6094.pth', map_location='cpu'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "VAE(\n",
+      "  (e1): Conv2d(3, 128, kernel_size=(4, 4), stride=(2, 2), padding=(1, 1))\n",
+      "  (bn1): BatchNorm2d(128, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+      "  (e2): Conv2d(128, 256, kernel_size=(4, 4), stride=(2, 2), padding=(1, 1))\n",
+      "  (bn2): BatchNorm2d(256, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+      "  (e3): Conv2d(256, 512, kernel_size=(4, 4), stride=(2, 2), padding=(1, 1))\n",
+      "  (bn3): BatchNorm2d(512, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+      "  (e4): Conv2d(512, 1024, kernel_size=(4, 4), stride=(2, 2), padding=(1, 1))\n",
+      "  (bn4): BatchNorm2d(1024, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+      "  (e5): Conv2d(1024, 1024, kernel_size=(4, 4), stride=(2, 2), padding=(1, 1))\n",
+      "  (bn5): BatchNorm2d(1024, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+      "  (fc1): Linear(in_features=16384, out_features=500, bias=True)\n",
+      "  (fc2): Linear(in_features=16384, out_features=500, bias=True)\n",
+      "  (d1): Linear(in_features=500, out_features=32768, bias=True)\n",
+      "  (up1): UpsamplingNearest2d(scale_factor=2, mode=nearest)\n",
+      "  (pd1): ReplicationPad2d((1, 1, 1, 1))\n",
+      "  (d2): Conv2d(2048, 1024, kernel_size=(3, 3), stride=(1, 1))\n",
+      "  (bn6): BatchNorm2d(1024, eps=0.001, momentum=0.1, affine=True, track_running_stats=True)\n",
+      "  (up2): UpsamplingNearest2d(scale_factor=2, mode=nearest)\n",
+      "  (pd2): ReplicationPad2d((1, 1, 1, 1))\n",
+      "  (d3): Conv2d(1024, 512, kernel_size=(3, 3), stride=(1, 1))\n",
+      "  (bn7): BatchNorm2d(512, eps=0.001, momentum=0.1, affine=True, track_running_stats=True)\n",
+      "  (up3): UpsamplingNearest2d(scale_factor=2, mode=nearest)\n",
+      "  (pd3): ReplicationPad2d((1, 1, 1, 1))\n",
+      "  (d4): Conv2d(512, 256, kernel_size=(3, 3), stride=(1, 1))\n",
+      "  (bn8): BatchNorm2d(256, eps=0.001, momentum=0.1, affine=True, track_running_stats=True)\n",
+      "  (up4): UpsamplingNearest2d(scale_factor=2, mode=nearest)\n",
+      "  (pd4): ReplicationPad2d((1, 1, 1, 1))\n",
+      "  (d5): Conv2d(256, 128, kernel_size=(3, 3), stride=(1, 1))\n",
+      "  (bn9): BatchNorm2d(128, eps=0.001, momentum=0.1, affine=True, track_running_stats=True)\n",
+      "  (up5): UpsamplingNearest2d(scale_factor=2, mode=nearest)\n",
+      "  (pd5): ReplicationPad2d((1, 1, 1, 1))\n",
+      "  (d6): Conv2d(128, 3, kernel_size=(3, 3), stride=(1, 1))\n",
+      "  (leakyrelu): LeakyReLU(negative_slope=0.2)\n",
+      "  (relu): ReLU()\n",
+      "  (sigmoid): Sigmoid()\n",
+      ")\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(model)"
    ]
   },
   {
@@ -194,7 +249,9 @@
   {
    "cell_type": "code",
    "execution_count": 112,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "datX = np.concatenate(datX_all[:], axis=0)\n",
