[update] plotlyの可視化を追加

--- a/notebooks/visualization.ipynb
+++ b/notebooks/visualization.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,11 +142,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.load_state_dict(torch.load('../models/Epoch_39_Train_loss_299016.4873_Test_loss_299262.6094.pth', map_location='cpu'))"
+    "model.load_state_dict(torch.load('../models/Epoch_30_Train_loss_293176.0932_Test_loss_295334.2326.pth', map_location='cpu'))"
    ]
   },
   {
@@ -325,10 +325,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 19,
+   "metadata": {},
    "outputs": [],
    "source": [
     "data_path = '../../data/vae_solar/test/'\n",
@@ -378,12 +376,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
     "# AIRCで計算した結果の読み込み\n",
-    "data_path = '../results/with_Face_weight/'\n",
+    "data_path = '../results/Epoch_30_without_Face/'\n",
     "\n",
     "filelist_X = glob(os.path.join(data_path, \"datX_*.npy\"))\n",
     "filelist_Y = glob(os.path.join(data_path, \"datY_*.npy\"))\n",
@@ -394,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -412,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -423,22 +421,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(1104, 500)"
+       "array([0, 0, 1, ..., 2, 0, 2])"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "datX.shape"
+    "datY"
    ]
   },
   {
@@ -482,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -498,9 +496,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[t-SNE] Computing pairwise distances...\n",
+      "[t-SNE] Computing 91 nearest neighbors...\n",
+      "[t-SNE] Computed conditional probabilities for sample 1000 / 1104\n",
+      "[t-SNE] Computed conditional probabilities for sample 1104 / 1104\n",
+      "[t-SNE] Mean sigma: 2.823882\n",
+      "[t-SNE] KL divergence after 100 iterations with early exaggeration: 0.638128\n",
+      "[t-SNE] Error after 500 iterations: 0.638128\n"
+     ]
+    }
+   ],
    "source": [
     "# 3d\n",
     "tsne = TSNE(n_components=3,\n",
@@ -513,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -524,9 +536,9 @@
       "[t-SNE] Computing 91 nearest neighbors...\n",
       "[t-SNE] Computed conditional probabilities for sample 1000 / 1104\n",
       "[t-SNE] Computed conditional probabilities for sample 1104 / 1104\n",
-      "[t-SNE] Mean sigma: 2.764050\n",
-      "[t-SNE] KL divergence after 100 iterations with early exaggeration: 0.629925\n",
-      "[t-SNE] Error after 225 iterations: 0.629925\n"
+      "[t-SNE] Mean sigma: 2.823882\n",
+      "[t-SNE] KL divergence after 100 iterations with early exaggeration: 0.584324\n",
+      "[t-SNE] Error after 225 iterations: 0.584324\n"
      ]
     }
    ],
@@ -542,7 +554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -551,7 +563,7 @@
        "(1104, 3)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -562,14 +574,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0, 0, 1, ..., 2, 0, 2])"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "datY"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -604,7 +629,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -616,7 +641,7 @@
        "<plotly.tools.PlotlyDisplay object>"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -627,7 +652,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -639,7 +664,7 @@
        "<plotly.tools.PlotlyDisplay object>"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
